--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,12 @@ body {
   width: 100vw;
 }
 
+@media only screen and (max-width: 53.125em) {
+  body {
+    overflow-y: hidden;
+  }
+}
+
 .container {
   margin-bottom: auto;
   display: -webkit-box;
@@ -65,8 +71,11 @@ body {
           justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-transition: all .1s;
-  transition: all .1s;
+  -webkit-transition: all 0.1s;
+  transition: all 0.1s;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
   margin-left: var(--menu-close-width);
   -webkit-transition: all var(--basic-transition-time);
   transition: all var(--basic-transition-time);
@@ -77,6 +86,16 @@ body {
     margin-top: 0;
     margin-bottom: auto;
     padding: 2rem;
+  }
+}
+
+@media only screen and (max-width: 53.125em) {
+  .container {
+    height: 100%;
+    overflow-y: scroll;
+    margin-top: var(--menu-close-width);
+    margin-left: 0;
+    padding: 0;
   }
 }
 
@@ -96,6 +115,8 @@ body {
   text-shadow: 3px 3px 10px black;
   margin-bottom: 5rem;
   margin-top: 80px;
+  position: relative;
+  z-index: 2;
 }
 
 @media only screen and (max-width: 28.125em) {
@@ -115,6 +136,10 @@ body {
   z-index: 2;
   margin: 3rem;
   margin-bottom: auto;
+}
+
+.card--6 {
+  margin-bottom: 10rem;
 }
 
 .card__printing-paper {
@@ -160,8 +185,8 @@ body {
 }
 
 .card__side {
-  -webkit-transition: all .8s ease;
-  transition: all .8s ease;
+  -webkit-transition: all 0.8s ease;
+  transition: all 0.8s ease;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
   border-radius: 3px;
@@ -213,10 +238,10 @@ body {
   top: 5px;
   right: 5px;
   cursor: pointer;
-  -webkit-transition: -webkit-transform .3s;
-  transition: -webkit-transform .3s;
-  transition: transform .3s;
-  transition: transform .3s, -webkit-transform .3s;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
   z-index: 10;
 }
 
@@ -255,8 +280,8 @@ body {
   width: 0px;
   height: 10px;
   z-index: 1;
-  -webkit-transition: all .6s;
-  transition: all .6s;
+  -webkit-transition: all 0.6s;
+  transition: all 0.6s;
   pointer-events: none;
 }
 
@@ -272,8 +297,8 @@ body {
   width: 0px;
   height: 11px;
   z-index: 1;
-  -webkit-transition: all .8s;
-  transition: all .8s;
+  -webkit-transition: all 0.8s;
+  transition: all 0.8s;
   pointer-events: none;
 }
 
@@ -392,10 +417,10 @@ body {
   cursor: pointer;
   -ms-flex-item-align: end;
       align-self: flex-end;
-  -webkit-transition: -webkit-transform .3s;
-  transition: -webkit-transform .3s;
-  transition: transform .3s;
-  transition: transform .3s, -webkit-transform .3s;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
 }
 
 .card__back-icon:hover {
@@ -422,7 +447,7 @@ body {
 }
 
 .navbar {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   display: -webkit-box;
@@ -441,7 +466,7 @@ body {
   height: 100%;
   width: var(--menu-close-width);
   background-color: #fff;
-  z-index: 5;
+  z-index: 50;
   -webkit-transition: all var(--basic-transition-time);
   transition: all var(--basic-transition-time);
 }
@@ -601,8 +626,8 @@ body {
   width: 0;
   background-color: #2B6F71;
   z-index: -1;
-  -webkit-transition: all .3s;
-  transition: all .3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .menu__item a:hover::before {
