--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -75,8 +75,9 @@ body {
     min-height: 100vh;
     width: 100vw;
 
-    // @media only screen and (max-width: $bp-largest) {
-    //     overflow-y: auto;
-    // }
+    @media only screen and (max-width: $bp-small-c) {
+        overflow-y: hidden;
+
+    }
 
 }
