--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,187 +1,172 @@
 .navbar {
-    position: absolute;
-    top: 0;
-    left: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
 
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
 
+  height: 100%;
+  width: var(--menu-close-width);
+  background-color: #fff;
+  z-index: 50;
+  // overflow: hidden;
+
+  transition: all var(--basic-transition-time);
+
+  @media only screen and (max-width: $bp-largest) {
     height: 100%;
-    width: var(--menu-close-width);
-    background-color: #fff;
-    z-index: 5;
-    // overflow: hidden;
+  }
 
-    transition: all var(--basic-transition-time);
-
-    @media only screen and (max-width: $bp-largest) {
-        height: 100%;
-    }
-
-    @media only screen and (max-width: $bp-small) {
-
-        height: var(--menu-close-width);
-        width: 100vw;
-    }
-
-
+  @media only screen and (max-width: $bp-small) {
+    height: var(--menu-close-width);
+    width: 100vw;
+  }
 }
 
 .hamburger {
-    width: 60px;
-    height: 60px;
-    position: absolute;
-    top: 4px;
-    left: 4px;
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  top: 4px;
+  left: 4px;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
+
+  @media only screen and (max-width: $bp-small) {
+    position: absolute;
+    transform: translate(-50%, 0%);
+    top: 4px;
+    left: 50%;
+  }
+
+  &:hover &__line {
+    // transition: scale .2s;
+    transform: scale(1.1);
+    box-shadow: 7px 7px 8px rgba($color: #000000, $alpha: 0.3);
+    // opacity: 1;
+  }
+
+  &__checkbox {
+    display: none;
+  }
+
+  &__checkbox:checked ~ label > div > &__line--1 {
+    transform-origin: center right;
+    transform: rotate(-45deg) translateY(-9px);
+  }
+
+  &__checkbox:checked ~ label > div > &__line--2 {
+    opacity: 0 !important;
+  }
+
+  &__checkbox:checked ~ label > div > &__line--3 {
+    transform-origin: center right;
+    transform: rotate(45deg) translateY(3px) translateX(-5px);
+  }
+
+  &__line {
+    width: 65%;
+    background-color: $color-primary-green;
+    height: 5px;
+    border-radius: 10px;
+    transition: all var(--basic-transition-time);
+
+    &--1 {
+    }
+
+    &--2 {
+      margin-top: 10%;
+      margin-bottom: 10%;
+    }
+
+    &--3 {
+    }
+  }
+}
+
+.menu {
+  justify-self: flex-start;
+  align-self: center;
+  // background-color: red;
+  margin: 6rem 0;
+  width: 80%;
+  overflow: hidden;
+  transition: all var(--basic-transition-time);
+  opacity: 0;
+  // transform: translateX(-10rem);
+  backface-visibility: hidden;
+  // overflow: hidden;
+
+  @media only screen and (max-width: $bp-largest) {
+    margin: 6rem 0;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    margin-top: 50px;
+  }
+
+  &__item {
+    font-family: $basic-font;
+    // padding: 3rem 0rem;
+    text-align: center;
+    // width: 50px;
+    height: 90px;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    cursor: pointer;
 
-    @media only screen and (max-width: $bp-small) {
-
-        position: absolute;
-        transform: translate(-50%, 0%);
-        top: 4px;
-        left: 50%;
-    }
-
-    &:hover &__line {
-        // transition: scale .2s;
-        transform: scale(1.1);
-        box-shadow: 7px 7px 8px rgba($color: #000000, $alpha: .3);
-        // opacity: 1;
-
-    }
-
-    &__checkbox {
-        display: none;
-    }
-
-    &__checkbox:checked~label>div>&__line--1 {
-        transform-origin: center right;
-        transform: rotate(-45deg) translateY(-9px);
-    }
-
-    &__checkbox:checked~label>div>&__line--2 {
-        opacity: 0 !important;
-
-    }
-
-    &__checkbox:checked~label>div>&__line--3 {
-        transform-origin: center right;
-        transform: rotate(45deg) translateY(3px) translateX(-5px);
-    }
-
-    &__line {
-        width: 65%;
-        background-color: $color-primary-green;
-        height: 5px;
-        border-radius: 10px;
-        transition: all var(--basic-transition-time);
-
-        &--1 {}
-
-        &--2 {
-            margin-top: 10%;
-            margin-bottom: 10%;
-        }
-
-        &--3 {}
-    }
-
-}
-
-
-.menu {
-    justify-self: flex-start;
-    align-self: center;
-    // background-color: red;
-    margin: 6rem 0;
-    width: 80%;
-    overflow: hidden;
-    transition: all var(--basic-transition-time);
-    opacity: 0;
-    // transform: translateX(-10rem);
-    backface-visibility: hidden;
-    // overflow: hidden;
-
-    @media only screen and (max-width: $bp-largest) {
-        margin: 6rem 0;
-    }
-
-    @media only screen and (max-width: $bp-small) {
-
-        margin-top: 50px;
-
-    }
-
-
-    &__item {
-
-        font-family: $basic-font;
-        // padding: 3rem 0rem;
-        text-align: center;
-        // width: 50px;
-        height: 90px;
+    a {
+      &,
+      &:link,
+      &:visited {
         display: flex;
         justify-content: center;
         align-items: center;
-
-
-        a {
-
-            &,
-            &:link,
-            &:visited {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                text-decoration: none;
-                font-size: 3rem;
-                color: #000;
-                height: 100%;
-                width: 100%;
-                // z-index: 5;
-                position: relative;
-            }
-
-            &::before {
-                position: absolute;
-                content: "";
-                height: 100%;
-                width: 0;
-                background-color: $color-primary-green;
-                z-index: -1;
-                transition: all .3s;
-            }
-
-            &:hover::before {
-                width: 100%;
-            }
-
-            &:hover {
-                color: #fff;
-                // box-shadow: 27px 27px 8px rgba($color: #000000, $alpha: .3);
-            }
-
-
-        }
-
-    }
-
-    &__line:first-of-type {
-        margin-top: 4rem;
-    }
-
-    &__line {
+        text-decoration: none;
+        font-size: 3rem;
+        color: #000;
+        height: 100%;
         width: 100%;
+        // z-index: 5;
+        position: relative;
+      }
+
+      &::before {
+        position: absolute;
+        content: "";
+        height: 100%;
+        width: 0;
         background-color: $color-primary-green;
-        height: 5px;
-        border-radius: 10px;
+        z-index: -1;
+        transition: all 0.3s;
+      }
+
+      &:hover::before {
+        width: 100%;
+      }
+
+      &:hover {
+        color: #fff;
+        // box-shadow: 27px 27px 8px rgba($color: #000000, $alpha: .3);
+      }
     }
+  }
+
+  &__line:first-of-type {
+    margin-top: 4rem;
+  }
+
+  &__line {
+    width: 100%;
+    background-color: $color-primary-green;
+    height: 5px;
+    border-radius: 10px;
+  }
 }
