--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,351 +1,342 @@
 .container {
+  margin-bottom: auto;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  // width: 100%;
+  // overflow-x: hidden;
+  transition: all 0.1s;
+  height: min-content;
+
+  margin-left: var(--menu-close-width);
+  transition: all var(--basic-transition-time);
+
+  @media only screen and (max-width: $bp-largest) {
+    margin-top: 0;
     margin-bottom: auto;
-    display: flex;
-    justify-items: center;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    // width: 100%;
-    // overflow-x: hidden;
-    transition: all .1s;
+    padding: 2rem;
+  }
 
-    margin-left: var(--menu-close-width);
-    transition: all var(--basic-transition-time);
+  @media only screen and (max-width: $bp-small-c) {
+    height: 100%;
+    overflow-y: scroll;
+    margin-top: var(--menu-close-width);
+    margin-left: 0;
+    padding: 0;
+  }
 
-
-    @media only screen and (max-width: $bp-largest) {
-        margin-top: 0;
-        margin-bottom: auto;
-        padding: 2rem;
-    }
-
-
-    @media only screen and (max-width: $bp-small) {
-
-        margin-top: var(--menu-close-width);
-        margin-left: 0;
-        padding: 0;
-    }
-
-
+  @media only screen and (max-width: $bp-small) {
+    margin-top: var(--menu-close-width);
+    margin-left: 0;
+    padding: 0;
+  }
 }
 
 .title {
-    width: 100%;
-    text-align: center;
-    font-size: 7rem;
-    color: white;
-    text-shadow: 3px 3px 10px black;
-    // margin-left: var(--menu-close-width);
-    margin-bottom: 5rem;
-    margin-top: 80px;
+  width: 100%;
+  text-align: center;
+  font-size: 7rem;
+  color: white;
+  text-shadow: 3px 3px 10px black;
+  // margin-left: var(--menu-close-width);
+  margin-bottom: 5rem;
+  margin-top: 80px;
+  position: relative;
+  z-index: 2;
 
-    @media only screen and (max-width: $bp-small) {
-        margin-left: 0;
-        font-size: 6rem;
-    }
+  @media only screen and (max-width: $bp-small) {
+    margin-left: 0;
+    font-size: 6rem;
+  }
 }
 
 .card {
+  //perfect spin
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  // transition: all .1s;
+  width: 300px;
+  height: 300px;
+  position: relative;
+  z-index: 2;
+  margin: 3rem;
+  margin-bottom: auto;
 
-    //perfect spin
-    perspective: 150rem;
-    -moz-perspective: 150rem;
-    // transition: all .1s;
-    width: 300px;
-    height: 300px;
-    position: relative;
+  &--6 {
+    margin-bottom: 10rem;
+  }
+
+  &__printing-paper {
+    opacity: 0;
+    position: absolute;
+    background-color: #fff;
+    width: 60px;
+    height: 100px;
+    top: -70px;
+    left: 28px;
+    padding-top: 10px;
+
+    div {
+      font-family: $basic-font;
+      font-weight: bold;
+      color: #000;
+      text-align: center;
+      font-size: 15px;
+      opacity: 1;
+      text-transform: uppercase;
+    }
+  }
+
+  &__printer-cover {
+    position: absolute;
+    background-color: #000;
+    height: 38px;
+    width: 80px;
+    top: 39px;
+    left: 20px;
+    z-index: 10;
+  }
+
+  &__printer-led {
+    position: absolute;
+    top: 45px;
+    left: 94px;
+    border-radius: 50%;
+    background-color: rgb(0, 60, 255);
+    height: 10px;
+    width: 10px;
+    z-index: 11;
+  }
+
+  &__side {
+    transition: all 0.8s ease;
+    backface-visibility: hidden;
+    border-radius: 3px;
+    overflow: hidden;
+
+    &-front {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+      background-color: rgba(#fff, 0.8);
+    }
+
+    &-back {
+      // backface-visibility: hidden;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+
+      display: flex;
+      flex-direction: column;
+
+      transform: rotateY(180deg);
+      background-color: rgba($color: #fff, $alpha: 0.9);
+    }
+  }
+
+  //FRONT SIDE STYLING
+  &__info {
+    fill: $color-secondary-orange;
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
+    transition: transform 0.3s;
+    z-index: 10;
+
+    &:hover {
+      transform: translateY(-0.6rem);
+    }
+  }
+
+  &__icon {
+    fill: #000;
+    width: 120px;
+    height: 120px;
+    // transition: all $basic-transition-time;
     z-index: 2;
-    margin: 3rem;
-    margin-bottom: auto;
 
+    &--1 {
+      background-image: url("../img/pacman-foto.png");
 
-    &__printing-paper {
-        opacity: 0;
-        position: absolute;
-        background-color: #fff;
-        width: 60px;
-        height: 100px;
-        top: -70px;
-        left: 28px;
-        padding-top: 10px;
-
-        div {
-            font-family: $basic-font;
-            font-weight: bold;
-            color: #000;
-            text-align: center;
-            font-size: 15px;
-            opacity: 1;
-            text-transform: uppercase;
-        }
+      background-size: cover;
+      height: 130px;
     }
 
-    &__printer-cover {
-        position: absolute;
-        background-color: #000;
-        height: 38px;
-        width: 80px;
-        top: 39px;
-        left: 20px;
-        z-index: 10;
+    &--2:hover {
+      animation: animation-card-icon-vibrate 1.2s;
+      // animation-iteration-count: infinite;
     }
 
-    &__printer-led {
-        position: absolute;
-        top: 45px;
-        left: 94px;
-        border-radius: 50%;
-        background-color: rgb(0, 60, 255);
-        height: 10px;
-        width: 10px;
-        z-index: 11;
-
+    &--3:hover ~ &--3-strip-1 {
+      background-color: #61f4de;
+      width: 60px;
     }
 
-
-    &__side {
-        transition: all .8s ease;
-        backface-visibility: hidden;
-        border-radius: 3px;
-        overflow: hidden;
-
-        &-front {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-            width: 100%;
-            background-color: rgba(#fff, 0.8);
-        }
-
-        &-back {
-            // backface-visibility: hidden;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-
-            display: flex;
-            flex-direction: column;
-
-            transform: rotateY(180deg);
-            background-color: rgba($color: #fff, $alpha: 0.9)
-        }
+    &--3-strip-1 {
+      position: absolute;
+      top: 30px;
+      right: 30px;
+      width: 0px;
+      height: 10px;
+      z-index: 1;
+      transition: all 0.6s;
+      pointer-events: none;
     }
 
-    //FRONT SIDE STYLING
-    &__info {
-        fill: $color-secondary-orange;
-        position: absolute;
-        width: 40px;
-        height: 40px;
-        top: 5px;
-        right: 5px;
-        cursor: pointer;
-        transition: transform .3s;
-        z-index: 10;
-
-        &:hover {
-            transform: translateY(-.6rem);
-
-        }
+    &--3:hover ~ &--3-strip-2 {
+      background-color: #68b6ef;
+      width: 60px;
     }
 
-
-
-    &__icon {
-        fill: #000;
-        width: 120px;
-        height: 120px;
-        // transition: all $basic-transition-time;
-        z-index: 2;
-
-        &--1 {
-            background-image: url("../img/pacman-foto.png");
-
-            background-size: cover;
-            height: 130px;
-        }
-
-
-
-        &--2:hover {
-            animation: animation-card-icon-vibrate 1.2s;
-            // animation-iteration-count: infinite;
-        }
-
-        &--3:hover~&--3-strip-1 {
-            background-color: #61f4de;
-            width: 60px;
-        }
-
-        &--3-strip-1 {
-            position: absolute;
-            top: 30px;
-            right: 30px;
-            width: 0px;
-            height: 10px;
-            z-index: 1;
-            transition: all .6s;
-            pointer-events: none;
-        }
-
-        &--3:hover~&--3-strip-2 {
-            background-color: #68b6ef;
-            width: 60px;
-        }
-
-        &--3-strip-2 {
-            position: absolute;
-            top: 45px;
-            right: 30px;
-            width: 0px;
-            height: 11px;
-            z-index: 1;
-            transition: all .8s;
-            pointer-events: none;
-        }
-
-        &--3:hover~&--3-strip-3 {
-            background-color: #6e78ff;
-            width: 60px;
-        }
-
-        &--3-strip-3 {
-            position: absolute;
-            top: 60px;
-            right: 30px;
-            width: 0px;
-            height: 10px;
-            z-index: 1;
-            transition: all 1s;
-            pointer-events: none;
-        }
+    &--3-strip-2 {
+      position: absolute;
+      top: 45px;
+      right: 30px;
+      width: 0px;
+      height: 11px;
+      z-index: 1;
+      transition: all 0.8s;
+      pointer-events: none;
     }
 
-    &__icon-3-animation {
-        position: relative;
+    &--3:hover ~ &--3-strip-3 {
+      background-color: #6e78ff;
+      width: 60px;
     }
 
-    &__icon-5-animation {
-        position: relative;
+    &--3-strip-3 {
+      position: absolute;
+      top: 60px;
+      right: 30px;
+      width: 0px;
+      height: 10px;
+      z-index: 1;
+      transition: all 1s;
+      pointer-events: none;
+    }
+  }
+
+  &__icon-3-animation {
+    position: relative;
+  }
+
+  &__icon-5-animation {
+    position: relative;
+  }
+
+  &__title {
+    text-align: center;
+    font-size: 3rem;
+    color: $color-primary-green;
+    text-transform: uppercase;
+    font-family: $basic-font;
+  }
+
+  &__dev-challenge {
+    // font-size: 3.5rem;
+  }
+
+  &__link {
+    &,
+    &:link,
+    &:visited {
+      text-decoration: none;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
     }
 
-    &__title {
-        text-align: center;
-        font-size: 3rem;
-        color: $color-primary-green;
-        text-transform: uppercase;
-        font-family: $basic-font;
+    &--pacman:hover .card__icon--1 {
+      background-image: url("../img/pacman-foto.gif");
+      animation: animation-pacman 3s;
     }
 
-    &__dev-challenge {
-        // font-size: 3.5rem;
+    &--pacman .card__title {
+      display: inline-block;
+      background-image: linear-gradient(90deg, rgba(204, 59, 59, 0) 0%, $color-primary-green 1%);
+      -webkit-background-clip: text;
+      color: transparent;
     }
 
-    &__link {
-
-        &,
-        &:link,
-        &:visited {
-            text-decoration: none;
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-            width: 100%;
-        }
-
-        &--pacman:hover .card__icon--1 {
-            background-image: url("../img/pacman-foto.gif");
-            animation: animation-pacman 3s;
-        }
-
-
-        &--pacman .card__title {
-            display: inline-block;
-            background-image: linear-gradient(90deg, rgba(204, 59, 59, 0) 0%, $color-primary-green 1%);
-            -webkit-background-clip: text;
-            color: transparent;
-        }
-
-        &--ball:hover .card__icon--4 {
-
-            // animation: animation-ball-odd 2s;
-            animation-timing-function: linear;
-        }
-
-        &--printer:hover .card__printing-paper {
-            animation: animation-printer-card 5s forwards;
-            transition: all 5s;
-            transform: translateY(160px);
-
-
-        }
-
-        &--printer:hover .card__printing-paper .line-1 {
-            animation: animation-printer-text-line-1 5s;
-        }
-
-        &--printer:hover .card__printing-paper .line-2 {
-            animation: animation-printer-text-line-2 5s;
-        }
-
-        &--printer:hover .card__printing-paper .line-3 {
-            animation: animation-printer-text-line-3 5s;
-        }
-
-        &--printer:hover .card__printing-paper .line-4 {
-            animation: animation-printer-text-line-4 5s;
-        }
-
-        &--printer:hover .card__printer-led {
-            background-color: rgb(47, 255, 64);
-            animation: animation-printer-led 5s;
-        }
-
+    &--ball:hover .card__icon--4 {
+      // animation: animation-ball-odd 2s;
+      animation-timing-function: linear;
     }
 
-
-    //back side styling
-
-    &__back-icon {
-        fill: $color-secondary-orange;
-        width: 40px;
-        height: 40px;
-        margin: 4px;
-        cursor: pointer;
-        align-self: flex-end;
-        transition: transform .3s;
-
-        &:hover {
-            transform: translateX(-.6rem);
-
-        }
+    &--printer:hover .card__printing-paper {
+      animation: animation-printer-card 5s forwards;
+      transition: all 5s;
+      transform: translateY(160px);
     }
 
-    &__about {
-
-        font-family: $basic-font;
-        height: 98%;
-        font-size: 2rem;
-        margin: 1rem;
-        margin-top: 0;
-        overflow-y: auto;
-        padding: 1rem;
+    &--printer:hover .card__printing-paper .line-1 {
+      animation: animation-printer-text-line-1 5s;
     }
 
+    &--printer:hover .card__printing-paper .line-2 {
+      animation: animation-printer-text-line-2 5s;
+    }
+
+    &--printer:hover .card__printing-paper .line-3 {
+      animation: animation-printer-text-line-3 5s;
+    }
+
+    &--printer:hover .card__printing-paper .line-4 {
+      animation: animation-printer-text-line-4 5s;
+    }
+
+    &--printer:hover .card__printer-led {
+      background-color: rgb(47, 255, 64);
+      animation: animation-printer-led 5s;
+    }
+  }
+
+  //back side styling
+
+  &__back-icon {
+    fill: $color-secondary-orange;
+    width: 40px;
+    height: 40px;
+    margin: 4px;
+    cursor: pointer;
+    align-self: flex-end;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: translateX(-0.6rem);
+    }
+  }
+
+  &__about {
+    font-family: $basic-font;
+    height: 98%;
+    font-size: 2rem;
+    margin: 1rem;
+    margin-top: 0;
+    overflow-y: auto;
+    padding: 1rem;
+  }
 }
 
 .back-all-card {
-    position: absolute;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 1;
+  position: absolute;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
 }
